[gd_scene load_steps=27 format=3 uid="uid://dvgp3cls6kblx"]

[ext_resource type="Texture2D" uid="uid://d24rgu6l4s6xd" path="res://assets/ui/screen_wipe/screen-10000.png" id="1_bpvpk"]
[ext_resource type="Theme" uid="uid://bg3qtag78l1y3" path="res://assets/ui/base_theme.tres" id="1_cogw0"]
[ext_resource type="Script" path="res://assets/ui/screen_wipe/death_screen.gd" id="1_xeye2"]
[ext_resource type="Texture2D" uid="uid://b6oak7ee3ydcc" path="res://assets/ui/screen_wipe/screen-10001.png" id="2_ecifi"]
[ext_resource type="Texture2D" uid="uid://b4c8b4g1cs4sw" path="res://assets/ui/screen_wipe/screen-10002.png" id="3_gfy4c"]
[ext_resource type="Texture2D" uid="uid://b2w4jmomu61c4" path="res://assets/ui/screen_wipe/screen-10003.png" id="4_hxetp"]
[ext_resource type="Texture2D" uid="uid://swvd2mbp3qr7" path="res://assets/ui/screen_wipe/screen-10004.png" id="5_7r6jw"]
[ext_resource type="Texture2D" uid="uid://duudbsmnnkdg2" path="res://assets/ui/screen_wipe/screen-10005.png" id="6_coa72"]
[ext_resource type="Texture2D" uid="uid://i8k4yy3a3mc7" path="res://assets/ui/screen_wipe/screen-10006.png" id="7_a2m5t"]
[ext_resource type="Texture2D" uid="uid://dc52ncerynavu" path="res://assets/ui/screen_wipe/screen-10007.png" id="8_qhwtn"]
[ext_resource type="Texture2D" uid="uid://c8mqmt33dfnpu" path="res://assets/ui/screen_wipe/screen-10008.png" id="9_2nugs"]
[ext_resource type="Texture2D" uid="uid://cepvjoxepxxav" path="res://assets/ui/screen_wipe/screen-10009.png" id="10_nrqhn"]
[ext_resource type="Texture2D" uid="uid://cwywnbwel7lw2" path="res://assets/ui/screen_wipe/screen-10010.png" id="11_6suy1"]
[ext_resource type="Texture2D" uid="uid://bmwer147b0k3j" path="res://assets/ui/screen_wipe/screen-10011.png" id="12_fc5s8"]
[ext_resource type="Texture2D" uid="uid://dkgipx3epo0n" path="res://assets/ui/screen_wipe/screen-10012.png" id="13_gk8rj"]
[ext_resource type="Texture2D" uid="uid://b6er2shk6vv2r" path="res://assets/ui/screen_wipe/screen-10013.png" id="14_nd3uc"]
[ext_resource type="Texture2D" uid="uid://dncwt4qn76kpn" path="res://assets/ui/screen_wipe/screen-10014.png" id="15_yrm3h"]
[ext_resource type="Texture2D" uid="uid://b3vbwa3j60lra" path="res://assets/ui/screen_wipe/screen-10015.png" id="16_70kof"]
[ext_resource type="Texture2D" uid="uid://d0ftxcb2bg6nt" path="res://assets/ui/screen_wipe/screen-10016.png" id="17_j0ek2"]
[ext_resource type="Texture2D" uid="uid://d7cp2lq8b7y7" path="res://assets/ui/screen_wipe/screen-10017.png" id="18_yfpsn"]
[ext_resource type="Texture2D" uid="uid://hd278pkgxu13" path="res://assets/ui/screen_wipe/screen-10018.png" id="19_47cvs"]
[ext_resource type="AudioStream" uid="uid://cq125dsxn1i2w" path="res://assets/audio/sfx/bass_lose.wav" id="22_q52vr"]

[sub_resource type="SpriteFrames" id="SpriteFrames_26onp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_bpvpk")
}, {
"duration": 1.0,
"texture": ExtResource("2_ecifi")
}, {
"duration": 1.0,
"texture": ExtResource("3_gfy4c")
}, {
"duration": 1.0,
"texture": ExtResource("4_hxetp")
}, {
"duration": 4.0,
"texture": ExtResource("5_7r6jw")
}, {
"duration": 1.0,
"texture": ExtResource("6_coa72")
}, {
"duration": 1.0,
"texture": ExtResource("7_a2m5t")
}, {
"duration": 1.0,
"texture": ExtResource("8_qhwtn")
}, {
"duration": 1.0,
"texture": ExtResource("9_2nugs")
}, {
"duration": 4.0,
"texture": ExtResource("10_nrqhn")
}, {
"duration": 1.0,
"texture": ExtResource("11_6suy1")
}, {
"duration": 1.0,
"texture": ExtResource("12_fc5s8")
}, {
"duration": 1.0,
"texture": ExtResource("13_gk8rj")
}, {
"duration": 4.0,
"texture": ExtResource("14_nd3uc")
}, {
"duration": 1.0,
"texture": ExtResource("15_yrm3h")
}, {
"duration": 1.0,
"texture": ExtResource("16_70kof")
}, {
"duration": 1.0,
"texture": ExtResource("17_j0ek2")
}, {
"duration": 1.0,
"texture": ExtResource("18_yfpsn")
}, {
"duration": 1.0,
"texture": ExtResource("19_47cvs")
}],
"loop": false,
"name": &"default",
"speed": 30.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_auo15"]
font_size = 256
font_color = Color(1, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_80w8q"]
font_size = 64

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ttvuc"]

[node name="DeathScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_cogw0")
script = ExtResource("1_xeye2")

[node name="DeathAnimatedSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_26onp")
autoplay = "default"
frame = 18
frame_progress = 1.0
centered = false

[node name="InfoVBoxContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 45
alignment = 1

[node name="Label" type="Label" parent="InfoVBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "You've Lost It"
label_settings = SubResource("LabelSettings_auo15")

[node name="CustomerLabel" type="Label" parent="InfoVBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Customers Served: %s"
label_settings = SubResource("LabelSettings_80w8q")

[node name="Button" type="Button" parent="InfoVBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_hover_color = Color(0.635294, 0.635294, 0.635294, 1)
theme_override_colors/font_pressed_color = Color(0.627451, 0.105882, 0.105882, 1)
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = SubResource("StyleBoxEmpty_ttvuc")
text = "PLAY AGAIN"
flat = true

[node name="BassLose" type="AudioStreamPlayer" parent="."]
stream = ExtResource("22_q52vr")
volume_db = -5.0
bus = &"SFX"

[connection signal="animation_finished" from="DeathAnimatedSprite" to="." method="_on_death_animated_sprite_animation_finished"]
[connection signal="pressed" from="InfoVBoxContainer/Button" to="." method="_on_button_pressed"]
